--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": ["react", "stage-0", "es2015"],
-  "plugins": ["transform-class-properties", "transform-decorators"],
+  "plugins": ["transform-class-properties", "transform-decorators-legacy"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
