--- a/.eslintrc
+++ b/.eslintrc
@@ -9,12 +9,23 @@
   },
   "parser": "babel-eslint",
   "rules": {
+    "indent": [2, 2],
     "quotes": [2, "single"],
     "strict": [2, "never"],
+    "semi": [2, "never"],
+    "arrow-spacing": 2,
+    "comma-spacing": [2, {"before": false, "after": true}],
+    "no-const-assign": 2,
+    "comma-dangle": [2, "never"],
+    "no-var": 2,
+    "prefer-const": 1,
+    "prefer-reflect": 1,
+    "prefer-spread": 1,
+    "prefer-template": 1,
     "babel/generator-star-spacing": 1,
     "babel/new-cap": 1,
     "babel/object-shorthand": 1,
-    "babel/arrow-parens": 1,
+    "babel/arrow-parens": 0,
     "babel/no-await-in-loop": 1,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
