--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "fabric-webpack": "^1.6.0-rc.1",
+    "html2canvas": "^0.5.0-beta4",
     "jquery": "^2.2.0",
     "lodash": "^4.0.1",
     "react": "^0.14.7",
